--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
     <color name="pastel_green">#A8E6CF</color>
     <color name="pastel_blue">#D0EFFF</color>
-    <color name="pastel_gray">#F0F0F0</color>
     <color name="pastel_beige">#FFF5E0</color>
-    <color name="text_dark">#333333</color>
     <color name="text_light">#FFFFFF</color>
-    <color name="green_primary">#008744</color>
     <color name="gray_input">#F2F2F2</color>
+    <color name="pastel_blue_dark">#1E88E5</color>
+    <color name="pastel_blue_light">#D0EFFF</color>
+    <color name="green_primary">#008744</color>
+    <color name="white">#FFFFFF</color>
+    <color name="pastel_gray">#F5F7FA</color>
+    <color name="text_dark">#212121</color>
+
 </resources>
