--- a/app/src/main/res/layout/item_mission.xml
+++ b/app/src/main/res/layout/item_mission.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -5,7 +6,8 @@
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
     app:cardCornerRadius="16dp"
-    app:cardElevation="8dp">
+    app:cardElevation="8dp"
+    android:backgroundTint="@color/bleu_marine">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,6 +20,7 @@
             android:text="Titre de la mission"
             android:textStyle="bold"
             android:textSize="16sp"
+            android:textColor="@color/white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
@@ -25,6 +28,7 @@
             android:id="@+id/textViewMissionDescription"
             android:text="Description"
             android:textSize="14sp"
+            android:textColor="@color/white"
             android:layout_marginTop="4dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
@@ -33,6 +37,7 @@
             android:id="@+id/textViewMissionDate"
             android:text="Date début - Date fin"
             android:textSize="12sp"
+            android:textColor="@color/white"
             android:layout_marginTop="4dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
@@ -42,6 +47,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Voir détail"
+            android:textColor="@color/bleu_marine"
+            android:backgroundTint="@color/white"
             android:layout_marginTop="8dp"/>
     </LinearLayout>
 </com.google.android.material.card.MaterialCardView>
