--- a/app/src/main/res/layout/activity_mission_detail.xml
+++ b/app/src/main/res/layout/activity_mission_detail.xml
@@ -3,13 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
     <!-- Contenu défilable -->
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="16dp">
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -115,5 +113,11 @@
         android:contentDescription="Annuler mission"
         app:srcCompat="@drawable/ic_cancel"
         app:backgroundTint="@color/bleu_marine"/>
-
+    <!-- Bouton pour voir toutes les demandes -->
+    <Button
+        android:id="@+id/btnViewAllRequests"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Voir toutes les demandes"
+        android:layout_marginTop="8dp"/>
 </RelativeLayout>
