--- a/app/src/main/res/layout/fragment_mes_demandes.xml
+++ b/app/src/main/res/layout/fragment_mes_demandes.xml
@@ -6,6 +6,13 @@
     android:background="@color/pastel_gray"
     android:padding="16dp">
 
+    <!-- Barre de recherche par statut -->
+    <Spinner
+        android:id="@+id/spinnerStatusFilter"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
